# Ya_lo_borro

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  build.sh  heaptrack.ShellProject.32308.zst  policy_stats.json  set_env.sh
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
lib/memory/: CMakeLists.txt
lib/memory/app/: CMakeLists.txt
lib/memory/app/include/: policies_stats.h
lib/memory/app/src/: policies_stats.c
lib/memory/include/: memory.h
lib/memory/src/: memory.c
lib/memory/tests/: CMakeLists.txt  test_memory.c  test_policies.c
